	* Fix an occasional crash when sending message to an offline user.

	XMPP:
	* Users connecting to Google Talk now have an "Initiate Chat" context menu
	  option for their buddies.  (Eion Robb)
	* Fix a crash when attempting to validate an invalid JID.
	* Resolve an issue when connecting to iChat Server when no resource
	  is specified.
	* Fix a crash when adding a buddy without an '@'.

	Yahoo:
	* Fix sending /buzz.
	* Fix blocking behavior for federated (MSN/OCS/Sametime) service users.
	  (Jason Cohen)
	* Add support for adding OCS and Sametime buddies.  OCS users are added
	  as "ocs/user@domain.tld" and Sametime users are added as
	  "ibm/sametime_id".  (Jason Cohen)

	Finch:
	* The TinyURL plugin now creates shorter URLs for long non-conversation
	  URLs, e.g. URLs to open Inbox in Yahoo/MSN protocols, or the Yahoo
	  Captcha when joining chat rooms.

	Pidgin:
	* The userlist in a multiuser chat can be styled via gtkrc by using the
	  widget name "pidgin_conv_userlist". (Heiko Schmitt)
	* Add a hold button to the media window.
	* Tooltips for custom smileys should work now.
	* Users with unread messages are again bolded in the Buddy List.
	* Minor reworking of the Preferences window's Network tab to make it need
	  less vertical space.
	* The global "Use remote DNS with SOCKS4 proxies" preference no longer
	  disappears when the preference value changes in certain ways.

version 2.6.3 (10/16/2009):
	General:
	* Fix a crash when performing DNS queries on Unixes that use the
	  blocking DNS lookups.  (Brian Lu)

	AIM and ICQ:
	* Fix a crash when some clients send contacts in a format we don't
	  understand.
	* Fix blocking and other privacy lists.  (Thanks to AOL)

version 2.6.2 (09/05/2009):
	libpurple:
	* Fix --disable-avahi to actually disable it in configure, as opposed
	  to just making the warning non-fatal.
	* Fix using GNOME proxy settings properly.  (Erik van Pienbroek)

	IRC:
	* Fix parsing of invalid TOPIC messages.  (CVE-2009-2703)

	MSN: